// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notice demo -- base 1`] = `
.c3 {
  vertical-align: baseline;
}

.c1 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
  padding-top: 2px;
}

.c4 {
  display: table-cell;
  vertical-align: middle;
}

.c5 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  width: 12px;
}

.c6 {
  cursor: pointer;
}

.c0 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c0 .c2 {
  color: #3860f4;
}

.c0 .c11 {
  color: #526075;
}

.c7 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #9effa5;
  background: #edfff2;
}

.c7 .c2 {
  color: #4cd964;
}

.c7 .c11 {
  color: #526075;
}

.c8 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #fff28f;
  background: #fffce5;
}

.c8 .c2 {
  color: #f9ce1d;
}

.c8 .c11 {
  color: #526075;
}

.c9 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #fed4d4;
  background: #fff0f0;
}

.c9 .c2 {
  color: #f44336;
}

.c9 .c11 {
  color: #526075;
}

.c10 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #cccccc;
  border: 1px solid #d9d9d9;
}

.c10 .c2 {
  color: #cccccc;
}

.c10 .c11 {
  color: #526075;
}

<div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c7"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c8"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c9"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c10"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
</div>
`;

exports[`Notice demo -- custom 1`] = `
.c3 {
  vertical-align: baseline;
}

.c7 {
  vertical-align: baseline;
}

.c7.c7.c7 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c1 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
  padding-top: 2px;
}

.c4 {
  display: table-cell;
  vertical-align: middle;
}

.c9 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
}

.c5 {
  display: table-cell;
  padding-left: 8px;
  white-space: nowrap;
  text-align: right;
  width: 12px;
}

.c6 {
  cursor: pointer;
}

.c0 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c0 .c2 {
  color: #3860f4;
}

.c0 .c8 {
  color: #526075;
}

.c10 .c2 {
  color: #4cd964;
}

.c10 .c8 {
  color: #526075;
}

.c11 .c2 {
  color: #f9ce1d;
}

.c11 .c8 {
  color: #526075;
}

.c12 .c2 {
  color: #f44336;
}

.c12 .c8 {
  color: #526075;
}

.c13 .c2 {
  color: #cccccc;
}

.c13 .c8 {
  color: #526075;
}

<div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__loading c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__loading uc-fe-icon-spin c7"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content
    </div>
    <div
      class="c8 c9"
    >
      <i
        class="uc-fe-icon icon__loading c3"
      />
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
  <div
    class="c0"
    style="margin-bottom:8px;"
  >
    <span
      class="c1"
    >
      <i
        class="uc-fe-icon icon__circle-mark2 c2 c3"
      />
    </span>
    <div
      class="c4"
    >
      Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content Notice content
    </div>
    <div
      class="c8 c9"
    >
      <i
        class="uc-fe-icon icon__loading c3"
      />
    </div>
    <div
      class="c5"
    >
      <i
        class="uc-fe-icon icon__cross c6 c3"
      />
    </div>
  </div>
</div>
`;

exports[`Notice demo -- notice 1`] = `
.c24 {
  vertical-align: baseline;
}

.c22 {
  display: table-cell;
  font-size: 15px;
  width: 15px;
  color: inherit;
  padding-right: 8px;
  padding-top: 2px;
}

.c25 {
  display: table-cell;
  vertical-align: middle;
}

.c21 {
  display: table;
  position: relative;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  margin: 0;
  border-radius: 1px;
  line-height: 18px;
  overflow: hidden;
  color: #0a1633;
  border: 1px solid #d2d6ea;
  background: #fafafc;
}

.c21 .c23 {
  color: #3860f4;
}

.c21 .c30 {
  color: #526075;
}

.c26 .c23 {
  color: #4cd964;
}

.c27 .c23 {
  color: #f9ce1d;
}

.c28 .c23 {
  color: #f44336;
}

.c29 .c23 {
  color: #cccccc;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 > .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c10 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.c9 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.c9 > * {
  font-size: 12px;
}

.c9 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.c9 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.c9 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.c9:hover .uc-fe-radio-icon-wrap,
.c9.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.c9.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.c9.uc-fe-radio-disabled {
  cursor: not-allowed;
  color: #cccccc;
}

.c9.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.c9.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.c9.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .sc-bxivhb {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .sc-bxivhb:last-child {
  margin-right: 0;
}

.c7 .c32 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c32:last-child {
  margin-right: 0;
}

.c7 .c33+.c33 {
  margin-left: -1px;
}

.c7 .c31 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c31:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c31:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c13 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c15 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c18 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c11 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c11:hover {
  border-color: #3357df;
}

.c11:hover .c17 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c11 .c17 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c11 .c19 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c11 .c12 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c11 .c14,
.c11 .c16 {
  line-height: 16px;
}

.c11 .c14 {
  padding-right: 20px;
}

.c11 .c16 {
  padding-left: 20px;
}

.c11 .c14 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        styleType
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c7"
        >
          <span
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              default
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              success
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              warning
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              error
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              disabled
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        closable
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c11"
        >
          <div
            class="c12 c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c15"
            >
              OFF
            </span>
            <span
              class="c17 c18"
            >
              <span
                class="c19 c20"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        icon
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c7"
        >
          <span
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              undefined
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              loading
            </span>
          </span>
          <span
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon c10"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              circle
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        longContent
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c11"
        >
          <div
            class="c12 c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c15"
            >
              OFF
            </span>
            <span
              class="c17 c18"
            >
              <span
                class="c19 c20"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="2"
      >
        withAction
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="10"
      >
        <div
          class="c11"
        >
          <div
            class="c12 c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c15"
            >
              OFF
            </span>
            <span
              class="c17 c18"
            >
              <span
                class="c19 c20"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c21"
    >
      <span
        class="c22"
      >
        <i
          class="uc-fe-icon icon__circle-mark2 c23 c24"
        />
      </span>
      <div
        class="c25"
      >
        This is a notice
      </div>
    </div>
  </div>
</div>
`;
